--- a/search.html
+++ b/search.html
@@ -6,10 +6,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
     <title>Search Results - Six Estate Consult</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="building.ico">
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a>  Six Estate Consult</div>
+        <div class="logo"><a href="index.html"><img src="logo.png" alt="logo"></a>  Six Estate Consult</div>
         <button class="mobile-menu-toggle" aria-label="Toggle menu">&#9776;</button>
         <nav class="nav-menu">
 
