--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a>  Six Estate Consult</div>
+        <div class="logo"><a href="index.html"><img src="logo.png" alt="logo"></a>  Six Estate Consult</div>
         <button class="mobile-menu-toggle" aria-label="Toggle menu">&#9776;</button>
         <nav class="nav-menu">
             <ul>
@@ -48,22 +48,22 @@
             </div>  
             <div class="slider completed-slider">
                 <div class="completed-slide">
-                    <img src="images/For-Sale2.jpg" alt="Completed Building 1">
+                    <img src="For-Sale2.jpg" alt="Completed Building 1">
                     <a href="for-sale.html" class="more-info-btn">More Info</a>
                 </div>
 
                 <div class="completed-slide">
-                    <img src="images/For-Sale.jpg" alt="Completed Building 2">
+                    <img src="For-Sale.jpg" alt="Completed Building 2">
                     <a href="for-sale.html" class="more-info-btn">More Info</a>
                 </div>
 
                 <div class="completed-slide">
-                    <img src="images/Rent1.jpg" alt="Completed Building 3">
+                    <img src="Rent1.jpg" alt="Completed Building 3">
                     <a href="for-rent.html" class="more-info-btn">More Info</a>
                 </div>
 
                 <div class="completed-slide">
-                    <img src="images/rent2.png" alt="Completed Building 4">
+                    <img src="rent2.png" alt="Completed Building 4">
                     <a href="for-rent.html" class="more-info-btn">More Info</a>
                 </div>
 
@@ -80,12 +80,12 @@
             </div>
             <div class="slider uncompleted-slider">
                 <div class="uncompleted-slide">
-                    <img src="images/uncompleted1.jpg" alt="Uncompleted Building 1">
+                    <img src="uncompleted1.jpg" alt="Uncompleted Building 1">
                     <a href="best-deals.html" class="more-info-btn">More Info</a>
                 </div>
 
                 <div class="uncompleted-slide">
-                    <img src="images/uncompleted2.jpg" alt="Uncompleted Building 2">
+                    <img src="uncompleted2.jpg" alt="Uncompleted Building 2">
                     <a href="best-deals.html" class="more-info-btn">More Info</a>
                 </div>
 
