--- a/for-sale.html
+++ b/for-sale.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a> Six Estate Consult</div>
+        <div class="logo"><a href="index.html"><img src="logo.png" alt="logo"></a> Six Estate Consult</div>
         <button class="mobile-menu-toggle" aria-label="Toggle menu">&#9776;</button>
         <nav class="nav-menu">
 
@@ -35,7 +35,7 @@
             <h2>Properties For Sale</h2>
             
             <div class="property-card">
-                <img src="images/For-Sale2.jpg" alt="Downtown Property">
+                <img src="For-Sale2.jpg" alt="Downtown Property">
                 <div class="property-details">
                     <h3>Downtown Luxury Apartment</h3>
                     <p><strong>Location:</strong> Downtown</p>
