--- a/for-sale.html
+++ b/for-sale.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="property-card">
-                <img src="images/For-Sale.jpg" alt="Suburban Property">
+                <img src="For-Sale.jpg" alt="Suburban Property">
                 <div class="property-details">
                     <h3>Suburban Family Home</h3>
                     <p><strong>Location:</strong> Suburb</p>
