--- a/for-rent.html
+++ b/for-rent.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a> Six Estate Consult</div>
+        <div class="logo"><a href="index.html"><img src="logo.png" alt="logo"></a> Six Estate Consult</div>
         <button class="mobile-menu-toggle" aria-label="Toggle menu">&#9776;</button>
         <nav class="nav-menu">
 
@@ -35,7 +35,7 @@
             <h2>Properties For Rent</h2>
             
             <div class="property-card">
-                <img src="images/Rent1.jpg" alt="City Center Property">
+                <img src="Rent1.jpg" alt="City Center Property">
                 <div class="property-details">
                     <h3>City Center Apartment</h3>
                     <p><strong>Location:</strong> City Center</p>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="property-card">
-                <img src="images/rent2.png" alt="Park View Property">
+                <img src="rent2.png" alt="Park View Property">
                 <div class="property-details">
                     <h3>Park View Residence</h3>
                     <p><strong>Location:</strong> Near Park</p>
