--- a/best-deals.html
+++ b/best-deals.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a> Six Estate Consult</div>
+        <div class="logo"><a href="index.html"><img src="logo.png" alt="logo"></a> Six Estate Consult</div>
         <button class="mobile-menu-toggle" aria-label="Toggle menu">&#9776;</button>
         <nav class="nav-menu">
 
@@ -35,7 +35,7 @@
 
             
             <div class="property-card">
-                <img src="images/uncompleted1.jpg" alt="Modern Villa">
+                <img src="uncompleted1.jpg" alt="Modern Villa">
                 <div class="property-details">
                     <h3>Modern Villa</h3>
                     <p><strong>Location:</strong> Prime Residential Area</p>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="property-card">
-                <img src="images/uncompleted2.jpg" alt="Commercial Complex">
+                <img src="uncompleted2.jpg" alt="Commercial Complex">
                 <div class="property-details">
                     <h3>Commercial Complex</h3>
                     <p><strong>Location:</strong> Business District</p>
